Ajustes no Docker Compose + Imagens.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,7 @@ services:
       - postgres
     networks:
       - app-network
+    restart: on-failure
 
   cliente-pendura-ai:
     image: jorgeroniel07/cliente-pendura-ai:latest
