feat: Implementação de Migrations e Criação dos services de User

--- a/apiPenduraAi/src/main/resources/application.properties
+++ b/apiPenduraAi/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=apiPenduraAi
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/appPAdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/api_pendura_ai
 spring.datasource.username=postgres
 spring.datasource.password=Password123#@!
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+
 
