Feat: Correções no docker compose | Criação e Implemtação de Excessões no backend

--- a/apiPenduraAi/src/main/resources/application.properties
+++ b/apiPenduraAi/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=apiPenduraAi
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/api_pendura_ai
+spring.datasource.url=jdbc:postgresql://localhost:5433/appPAdb
 spring.datasource.username=postgres
 spring.datasource.password=Password123#@!
 spring.jpa.show-sql=true
